--- a/src/css/Preenchido.css
+++ b/src/css/Preenchido.css
@@ -8,7 +8,7 @@ body {
     align-items: center;
     height: 100vh;
     max-height: 110vh;
-    background-image:url(public/img/fundo.png); 
+    background-image:url(/img/fundo.png); 
     background-size: cover; 
     color: white;
 }
