--- a/src/css/Preenchido.css
+++ b/src/css/Preenchido.css
@@ -33,17 +33,15 @@ body {
 .icon {
     position: relative;
     margin-bottom: 20px;
-    top: 0; /* Removi o valor negativo */
-    left: 0;
-    transform: translate(0, 0);
     display: flex;
     justify-content: center;
-    align-items: center; /* Centraliza verticalmente */
-    width: 100%; /* Ocupa toda a largura disponível */
+    align-items: center;
+    width: 100%;
+    margin-top: 20px; /* Adicione uma margem superior para mover o ícone mais para cima */
 }
 
 .icon img {
-    width: 230px; /* Tamanho padrão para telas maiores */
+    width: 230px;
     height: auto;
     max-width: 100%;
 }
@@ -57,23 +55,17 @@ body {
 .fonte h1 {
     font-family: 'Poppins', sans-serif;
     font-size: 3.5rem;
-    position: relative;
-    left: 0px; 
-    top: 145px; 
-    margin: 0;
-    width: 98%;
-    max-width: 400px;
+    margin-top: 50px; /* Ajuste de margem para posicionar o texto corretamente abaixo do ícone */
+    margin-bottom: 20px;
+    text-align: center;
 }
 
 .fonte h2 {
     font-family: 'Poppins', sans-serif;
     font-size: 3.5rem;
-    position: relative;
-    right: 0px; 
-    top: 145px; 
-    margin: 0;
-    width: 98%;
-    max-width: 400px;
+    margin-top: 10px;
+    margin-bottom: 0;
+    text-align: center;
 }
 
 /* Estilos responsivos usando media queries */
@@ -86,14 +78,17 @@ body {
         margin: 0 auto;
     }
     .icon img {
-        width: 180px; /* Ajuste para o ícone em telas médias */
+        width: 180px;
+    }
+    .fonte h1 {
+        margin-top: 30px; /* Ajuste de margem para dispositivos médios */
     }
 }
 
 /* Dispositivos menores (até 768px) */
 @media (max-width: 768px) {
     body {
-        height: auto; /* Deixe a altura ajustar-se ao conteúdo */
+        height: auto;
     }
     .CaixaMensagem {
         width: 90%; 
@@ -101,18 +96,18 @@ body {
         margin-top: 2em;
     }
     .icon {
-        top: 0;
         margin-top: 1em;
         justify-content: center;
     }
     .icon img {
-        width: 120px; /* Tamanho menor para dispositivos menores */
+        width: 120px;
     }
-    .fonte h1, .fonte h2 {
+    .fonte h1 {
+        font-size: 2rem;
+        margin-top: 20px;
+    }
+    .fonte h2 {
         font-size: 1.8rem;
-        text-align: center;
-        left: 0;
-        top: auto;
     }
 }
 
@@ -124,22 +119,18 @@ body {
         margin-top: 1.5em;
     }
     .icon {
-        top: 0;
         margin-top: 1em;
         justify-content: center;
     }
     .icon img {
-        width: 100px; /* Menor tamanho para telas pequenas */
+        width: 100px;
     }
     .fonte h1 {
         font-size: 1.5rem;
         margin-top: 0.5em;
-        text-align: center;
     }
     .fonte h2 {
         font-size: 1.3rem;
-        text-align: center;
-        left: 0;
-        top: 0;
     }
 }
+
