--- a/src/css/Preenchido.css
+++ b/src/css/Preenchido.css
@@ -7,23 +7,20 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-image: url(/img/fundo.png); 
+    max-height: 110vh;
+    background-image:url(/img/fundo.png); 
     background-size: cover; 
     color: white;
-    font-family: 'Poppins', sans-serif;
 }
 
 /* Estilo para o logo */
-.CaixaMensagem {
-    margin-left: 15em;
-    width: 100%;
-}
 
-.logo {
-    position: absolute; /* Tornar a logo fixa no topo da página */
+.CaixaMensagem{
+    margin-left: 15em;
+}
+.logo {    
     top: 25px;
     left: 20px;
-    z-index: 100; /* Garante que a logo apareça acima de outros elementos */
 }
 
 .logo-img {
@@ -33,112 +30,99 @@ body {
 
 /* Estilo para o ícone */
 .icon {
-    position: absolute; /* Torna o ícone independente do fluxo normal da página */
-    top: 10%; /* Ajusta a posição do ícone para cima da frase */
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    position: relative; /* Permite que o ícone flua com o layout */
+    margin-bottom: 20px; /* Espaçamento abaixo do ícone */
+    
+    /* Aqui você pode ajustar a posição do ícone conforme desejar */
+    top: -45.5px; /* Ajuste para mover para cima ou para baixo */
+    left: -365px; /* Ajuste para mover para a esquerda ou direita */
+    transform: translate(0, 0); /* Altere valores para reposicionar o ícone se necessário */
 }
 
 .icon img {
     width: 230px;
-    height: auto;
     max-width: 100%;
+    height: auto;
 }
 
 /* Centraliza o texto e organiza o h1 */
 .content {
     position: relative;
     text-align: center;
-    margin-top: 200px; /* Ajuste para garantir que o texto fique abaixo do ícone */
 }
 
 .fonte h1 {
     font-family: 'Poppins', sans-serif;
     font-size: 3.5rem;
-    margin-top: 50px; /* Ajuste de margem para o texto */
-    margin-bottom: 20px;
-    text-align: center;
+    position: relative;
+    left: 0px; 
+    top: 145px; 
+    margin: 0;
+    width: 98%;
+    max-width: 400px;
 }
 
 .fonte h2 {
     font-family: 'Poppins', sans-serif;
     font-size: 3.5rem;
-    margin-top: 10px;
-    margin-bottom: 0;
-    text-align: center;
+    position: relative;
+    right: 0px; 
+    top: 145px; 
+    margin: 0;
+    width: 98%;
+    max-width: 400px;
 }
 
 /* Estilos responsivos usando media queries */
-
-/* Dispositivos médios (até 1024px) */
-@media (max-width: 1024px) {
-    .CaixaMensagem {
-        margin-top: -40em;
-        width: 90%; 
-        margin: 0 auto;
-    }
-    .logo-img {
-        width: 60px; /* Reduz o tamanho da logo em dispositivos menores */
-    }
-    .icon img {
-        width: 180px;
-    }
-    .fonte h1 {
-        margin-top: 30px; /* Ajuste de margem para dispositivos médios */
-    }
+@media (max-width: 1024px){
+    
+    .CaixaMensagem{
+        margin-top: -40em;        
+    }    
 }
 
-/* Dispositivos menores (até 768px) */
 @media (max-width: 768px) {
     body {
-        height: auto;
+        max-height: 10vh;                
     }
-    .CaixaMensagem {
-        width: 90%; 
-        margin: 0 auto;
-        margin-top: 2em;
-    }
-    .logo-img {
-        width: 50px;
-    }
-    .icon {
-        top: 8%; /* Ajuste a posição do ícone para telas menores */
+    .CaixaMensagem{
+        width: 14em;
+        margin-top: -40em;
     }
     .icon img {
-        width: 120px;
+        width: 1em;   
+        margin-left: 4em;     
     }
-    .fonte h1 {
-        font-size: 2rem;
-        margin-top: 20px;
+    .fonte h1{
+        margin-top: 1.5em;
+        font-size: 2em;
     }
-    .fonte h2 {
-        font-size: 1.8rem;
+    .fonte h2{
+        margin-left: 0.2em;
+        font-size: 1.8em;
     }
 }
 
-/* Dispositivos pequenos (até 580px) */
 @media (max-width: 580px) {
-    .CaixaMensagem {
-        width: 100%; 
-        margin: 0 auto;
-        margin-top: 1.5em;
-    }
-    .logo-img {
-        width: 40px;
-    }
-    .icon {
-        top: 5%; /* Ajuste a posição do ícone para cima em telas menores */
+    .CaixaMensagem{        
+        margin-top: -40em;    
+        width: 40%;    
     }
     .icon img {
-        width: 100px;
+        margin-left: 35em;
+        width: 10em;      
+        margin-top: -50em;          
     }
-    .fonte h1 {
-        font-size: 1.5rem;
-        margin-top: 0.5em;
+    .fonte h1{
+        margin-top: 6.5em;
+        font-size: 1.5em;
+        left: 12%;
+        top: 2em;
     }
-    .fonte h2 {
-        font-size: 1.3rem;
+    .fonte h2{
+        margin-left: 6em;
+        font-size: 1.3em;
+        left: -2.7em;
+        top: 2.5em;
     }
 }
