--- a/src/css/Preenchido.css
+++ b/src/css/Preenchido.css
@@ -7,18 +7,19 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    max-height: 110vh;
-    background-image:url(/img/fundo.png); 
+    background-image: url(/img/fundo.png); 
     background-size: cover; 
     color: white;
+    font-family: 'Poppins', sans-serif;
 }
 
 /* Estilo para o logo */
-
-.CaixaMensagem{
+.CaixaMensagem {
     margin-left: 15em;
+    width: 100%;
 }
-.logo {    
+
+.logo {
     top: 25px;
     left: 20px;
 }
@@ -30,19 +31,21 @@ body {
 
 /* Estilo para o ícone */
 .icon {
-    position: relative; /* Permite que o ícone flua com o layout */
-    margin-bottom: 20px; /* Espaçamento abaixo do ícone */
-    
-    /* Aqui você pode ajustar a posição do ícone conforme desejar */
-    top: -45.5px; /* Ajuste para mover para cima ou para baixo */
-    left: -365px; /* Ajuste para mover para a esquerda ou direita */
-    transform: translate(0, 0); /* Altere valores para reposicionar o ícone se necessário */
+    position: relative;
+    margin-bottom: 20px;
+    top: 0; /* Removi o valor negativo */
+    left: 0;
+    transform: translate(0, 0);
+    display: flex;
+    justify-content: center;
+    align-items: center; /* Centraliza verticalmente */
+    width: 100%; /* Ocupa toda a largura disponível */
 }
 
 .icon img {
-    width: 230px;
-    max-width: 100%;
+    width: 230px; /* Tamanho padrão para telas maiores */
     height: auto;
+    max-width: 100%;
 }
 
 /* Centraliza o texto e organiza o h1 */
@@ -74,55 +77,69 @@ body {
 }
 
 /* Estilos responsivos usando media queries */
-@media (max-width: 1024px){
-    
-    .CaixaMensagem{
-        margin-top: -40em;        
-    }    
+
+/* Dispositivos médios (até 1024px) */
+@media (max-width: 1024px) {
+    .CaixaMensagem {
+        margin-top: -40em;
+        width: 90%; 
+        margin: 0 auto;
+    }
+    .icon img {
+        width: 180px; /* Ajuste para o ícone em telas médias */
+    }
 }
 
+/* Dispositivos menores (até 768px) */
 @media (max-width: 768px) {
     body {
-        max-height: 10vh;                
+        height: auto; /* Deixe a altura ajustar-se ao conteúdo */
     }
-    .CaixaMensagem{
-        width: 14em;
-        margin-top: -40em;
+    .CaixaMensagem {
+        width: 90%; 
+        margin: 0 auto;
+        margin-top: 2em;
+    }
+    .icon {
+        top: 0;
+        margin-top: 1em;
+        justify-content: center;
     }
     .icon img {
-        width: 1em;   
-        margin-left: 4em;     
+        width: 120px; /* Tamanho menor para dispositivos menores */
     }
-    .fonte h1{
-        margin-top: 1.5em;
-        font-size: 2em;
-    }
-    .fonte h2{
-        margin-left: 0.2em;
-        font-size: 1.8em;
+    .fonte h1, .fonte h2 {
+        font-size: 1.8rem;
+        text-align: center;
+        left: 0;
+        top: auto;
     }
 }
 
+/* Dispositivos pequenos (até 580px) */
 @media (max-width: 580px) {
-    .CaixaMensagem{        
-        margin-top: -40em;    
-        width: 40%;    
+    .CaixaMensagem {
+        width: 100%; 
+        margin: 0 auto;
+        margin-top: 1.5em;
+    }
+    .icon {
+        top: 0;
+        margin-top: 1em;
+        justify-content: center;
     }
     .icon img {
-        margin-left: 35em;
-        width: 10em;      
-        margin-top: -50em;          
+        width: 100px; /* Menor tamanho para telas pequenas */
     }
-    .fonte h1{
-        margin-top: 6.5em;
-        font-size: 1.5em;
-        left: 12%;
-        top: 2em;
+    .fonte h1 {
+        font-size: 1.5rem;
+        margin-top: 0.5em;
+        text-align: center;
     }
-    .fonte h2{
-        margin-left: 6em;
-        font-size: 1.3em;
-        left: -2.7em;
-        top: 2.5em;
+    .fonte h2 {
+        font-size: 1.3rem;
+        text-align: center;
+        left: 0;
+        top: 0;
     }
 }
