--- a/src/css/Preenchido.css
+++ b/src/css/Preenchido.css
@@ -7,19 +7,18 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-image: url(/img/fundo.png); 
+    max-height: 110vh;
+    background-image:url(/img/fundo.png); 
     background-size: cover; 
     color: white;
-    font-family: 'Poppins', sans-serif;
 }
 
 /* Estilo para o logo */
-.CaixaMensagem {
-    margin-left: 15em;
-    width: 100%;
-}
 
-.logo {
+.CaixaMensagem{
+    margin-left: 15em;
+}
+.logo {    
     top: 25px;
     left: 20px;
 }
@@ -31,22 +30,19 @@ body {
 
 /* Estilo para o ícone */
 .icon {
-    position: relative;
-    margin-bottom: 20px;
-    top: 0;
-    left: 0;
-    transform: translate(0, 0);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
+    position: relative; /* Permite que o ícone flua com o layout */
+    margin-bottom: 20px; /* Espaçamento abaixo do ícone */
+    
+    /* Aqui você pode ajustar a posição do ícone conforme desejar */
+    top: -45.5px; /* Ajuste para mover para cima ou para baixo */
+    left: -365px; /* Ajuste para mover para a esquerda ou direita */
+    transform: translate(0, 0); /* Altere valores para reposicionar o ícone se necessário */
 }
 
 .icon img {
-    width: 230px; /* Tamanho padrão para telas de PC */
-    height: auto;
+    width: 230px;
     max-width: 100%;
-    margin-right: 200px; /* Espaçamento entre o ícone e a frase */
+    height: auto;
 }
 
 /* Centraliza o texto e organiza o h1 */
@@ -77,69 +73,56 @@ body {
     max-width: 400px;
 }
 
-/* --- Estilos responsivos --- */
-
-/* Dispositivos médios (até 1024px) */
-@media (max-width: 1024px) {
-    .CaixaMensagem {
-        margin-left: 0; /* Remover o grande espaçamento lateral para centralizar */
-        width: 90%; 
-        margin: 0 auto;
-    }
-    .icon img {
-        width: 180px; /* Ajuste para o ícone em telas médias */
-    }
-    .fonte h1, .fonte h2 {
-        font-size: 2.5rem; /* Reduz o tamanho do texto em telas médias */
-    }
+/* Estilos responsivos usando media queries */
+@media (max-width: 1024px){
+    
+    .CaixaMensagem{
+        margin-top: -40em;        
+    }    
 }
 
-/* Dispositivos menores (até 768px) */
 @media (max-width: 768px) {
     body {
-        height: auto; /* Deixe a altura ajustar-se ao conteúdo */
+        max-height: 10vh;                
     }
-    .CaixaMensagem {
-        width: 90%; 
-        margin: 0 auto;
-        margin-top: 2em;
-    }
-    .icon {
-        margin-top: 1em;
-        justify-content: center;
+    .CaixaMensagem{
+        width: 14em;
+        margin-top: -40em;
     }
     .icon img {
-        width: 120px; /* Tamanho menor para dispositivos menores */
+        width: 1em;   
+        margin-left: 4em;     
     }
-    .fonte h1, .fonte h2 {
-        font-size: 1.8rem;
-        text-align: center;
-        top: auto;
+    .fonte h1{
+        margin-top: 1.5em;
+        font-size: 2em;
+    }
+    .fonte h2{
+        margin-left: 0.2em;
+        font-size: 1.8em;
     }
 }
 
-/* Dispositivos pequenos (até 580px) */
 @media (max-width: 580px) {
-    .CaixaMensagem {
-        width: 100%; 
-        margin: 0 auto;
-        margin-top: 1.5em;
-    }
-    .icon {
-        margin-top: 1em;
-        justify-content: center;
+    .CaixaMensagem{        
+        margin-top: -40em;    
+        width: 40%;    
     }
     .icon img {
-        width: 100px; /* Menor tamanho para telas pequenas */
+        margin-left: 35em;
+        width: 10em;      
+        margin-top: -50em;          
     }
-    .fonte h1 {
-        font-size: 1.5rem;
-        margin-top: 0.5em;
-        text-align: center;
+    .fonte h1{
+        margin-top: 6.5em;
+        font-size: 1.5em;
+        left: 12%;
+        top: 2em;
     }
-    .fonte h2 {
-        font-size: 1.3rem;
-        text-align: center;
-        top: 0;
+    .fonte h2{
+        margin-left: 6em;
+        font-size: 1.3em;
+        left: -2.7em;
+        top: 2.5em;
     }
 }
