--- a/src/css/Preenchido.css
+++ b/src/css/Preenchido.css
@@ -1,16 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
-body {
-    margin: 0; 
-    display: flex;    
-    flex-direction: column;
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%; /* Garante que o corpo ocupe toda a altura da tela */
+    overflow-x: hidden; /* Impede a rolagem horizontal */
+    display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    max-height: 110vh;
-    background-image:url(/img/fundo.png); 
-    background-size: cover; 
-    color: white;
+    background-image: url(/img/fundo.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    color: #fff;
 }
 
 /* Estilo para o logo */
