--- a/src/css/Preenchido.css
+++ b/src/css/Preenchido.css
@@ -3,8 +3,20 @@
 html, body {
     margin: 0;
     padding: 0;
-    height: 100%; /* Garante que o corpo ocupe toda a altura da tela */
+    min-height: 100vh; /* Garante que o corpo ocupe pelo menos 100% da altura da tela */
     overflow-x: hidden; /* Impede a rolagem horizontal */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url(/img/fundo.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    color: #fff;
+}
+
+body {
+    min-height: 100vh; /* Garante que o body ocupe a altura mínima da tela */
     display: flex;
     justify-content: center;
     align-items: center;
